--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           name: Deploy the image using ssh
           command: |
             ssh -o StrictHostKeyChecking=no -i $HOME/.ssh -i "key.pem" ubuntu@ec2-52-37-125-134.us-west-2.compute.amazonaws.com " aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/i7p7l8h6
-            sudo docker run -d -p 3000:3000 --name nodeapp public.ecr.aws/i7p7l8h6/project:lts"
+            sudo docker run -d -p 3000:3000 --name nodeapp public.ecr.aws/i7p7l8h6/ansible"
       - run:
           name: Run Ansible playbook
           command: ansible-playbook deploy.yml
