--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  aws-ecr: circleci/aws-ecr@9.1.0
+  aws-ecr-public: circleci/aws-ecr-public@1.1.0
 jobs:
   test:
     docker:
@@ -18,7 +18,7 @@ jobs:
           name: Deploy the image using ssh
           command: |
             ssh -o StrictHostKeyChecking=no -i $HOME/.ssh -i "key.pem" ubuntu@ec2-52-37-125-134.us-west-2.compute.amazonaws.com " aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/i7p7l8h6
-            sudo docker run -d -p 3000:3000 --name nodeapp public.ecr.aws/i7p7l8h6/ansible"
+            sudo docker run -d -p 3000:3000 --name nodeapp public.ecr.aws/i7p7l8h6/ansible:lts"
       - run:
           name: Run Ansible playbook
           command: ansible-playbook deploy.yml
@@ -28,8 +28,8 @@ workflows:
     jobs:
       - test:
           context: Dockerhub
-      - aws-ecr/public-build-and-push-image:
-          repo: project
+      - aws-ecr-public/build-and-push-image:
+          repo: ansible
           tag: lts
           dockerfile: Dockerfile
           path: .
@@ -37,4 +37,4 @@ workflows:
             - test
       - deploy:
           requires:
-            - aws-ecr/public-build-and-push-image
+            - aws-ecr-public/build-and-push-image
