--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,7 @@
 version: 2.1
+orbs:
+  aws-ecr: circleci/aws-ecr@8.2.1
+
 jobs:
   test:
     docker:
@@ -8,29 +11,37 @@ jobs:
       - setup_remote_docker:
           version: 20.10.14
           docker_layer_caching: true
+
   deploy:
     docker:
       - image: docker:stable
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "your-ssh-key-fingerprint"
       - run:
           name: Deploy the image using SSH
           command: |
-            ssh -o StrictHostKeyChecking=no -i $HOME/.ssh -i "key.pem" ubuntu@ec2-52-37-125-134.us-west-2.compute.amazonaws.com "aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/i7p7l8h6
-            sudo docker run -d -p 3000:3000 --name nodeapp public.ecr.aws/i7p7l8h6/ansible:lts"
-      - run:
-          name: Build and push Docker image
-          command: |
-            docker build -t public.ecr.aws/i7p7l8h6/ansible:lts .
-            docker push public.ecr.aws/i7p7l8h6/ansible:lts
+            ssh -o StrictHostKeyChecking=no -i $HOME/.ssh/key.pem ubuntu@ec2-35-89-183-122.us-west-2.compute.amazonaws.com "aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 618552392835.dkr.ecr.us-west-2.amazonaws.com
+            sudo docker run -d -p 3000:3000 --name nodeapp 618552392835.dkr.ecr.us-west-2.amazonaws.com/ansible:lts"
       - run:
           name: Run Ansible playbook
           command: ansible-playbook deploy.yml
+
 workflows:
   version: 2
   build:
     jobs:
       - test:
           context: Dockerhub
-      - deploy:
+      - aws-ecr/build-and-push-image:
+          repo: ansible
+          tag: lts
+          dockerfile: Dockerfile
+          path: .
+          registry-id: AWS_ECR_REGISTRY_ID
           requires:
             - test
+      - deploy:
+          requires:
+            - aws-ecr/build-and-push-image
