--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,18 +22,16 @@ jobs:
       - run:
           name: Deploy the image using SSH
           command: |
-            ssh -o StrictHostKeyChecking=no -i $HOME/ssh/key.pem ubuntu@ec2-35-92-0-139.us-west-2.compute.amazonaws.com "aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 618552392835.dkr.ecr.us-west-2.amazonaws.com
-            sudo docker run -d -p 3000:3000 --name nodeapp 618552392835.dkr.ecr.us-west-2.amazonaws.com/ansible:lts"
+            ssh -o StrictHostKeyChecking=no -i $HOME/ssh/key.pem ubuntu@ec2-35-92-0-139.us-west-2.compute.amazonaws.com "eval \$(aws ecr get-login --no-include-email --region us-west-2) && docker pull 618552392835.dkr.ecr.us-west-2.amazonaws.com/ansible:lts && docker run -d -p 3000:3000 --name nodeapp 618552392835.dkr.ecr.us-west-2.amazonaws.com/ansible:lts"
       - run:
           name: Run Ansible playbook
           command: ansible-playbook servers.yml -e "state=present containers=<count>"
 
 workflows:
   version: 2
-  build:
+  build-deploy:
     jobs:
-      - test:
-          context: Dockerhub
+      - test
       - aws-ecr/build-and-push-image:
           repo: ansible
           tag: lts
