--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
             sudo docker tag nodeapp $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
             sudo docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
             sudo docker push $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
-            ssh -o StrictHostKeyChecking=no -i $HOME/.ssh/ec2-35-88-72-141.us-west-2.compute.amazonaws.com "
+            ssh -o StrictHostKeyChecking=no -i $HOME/.ssh/aws ec2-35-88-72-141.us-west-2.compute.amazonaws.com "
             sudo docker run -d -p 3000:3000 --name test $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM"
 
 workflows:
