--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,11 +29,11 @@ jobs:
           name: Build and push Docker image
           command: |
             sudo docker build -t nodeapp .
-            sudo docker tag nodeapp $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
-            sudo docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
-            sudo docker push $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM
+            sudo docker tag nodeapp $username/nodeapp:$CIRCLE_BUILD_NUM
+            sudo docker login -u $username -p $password
+            sudo docker push $username/nodeapp:$CIRCLE_BUILD_NUM
             ssh -o StrictHostKeyChecking=no -i $HOME/.ssh/aws ec2-35-88-72-141.us-west-2.compute.amazonaws.com "
-            sudo docker run -d -p 3000:3000 --name test $DOCKER_LOGIN/nodeapp:$CIRCLE_BUILD_NUM"
+            sudo docker run -d -p 3000:3000 --name test $username/nodeapp:$CIRCLE_BUILD_NUM"
 
 workflows:
   version: 2
