--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,14 @@ version: 2.1
 
 jobs:
   deploy-job:
-    executor: ansible/default
+    docker:
+      - image: circleci/python:3.9
+
     steps:
       - checkout
-      - setup_remote_docker:
-          version: 20.10.7
       - run:
           name: Install Ansible
-          command: sudo apt-get update && sudo apt-get install -y ansible
+          command: sudo pip3 install ansible
       - run:
           name: Run Ansible playbook
           command: ansible-playbook -i inventory.yml --private-key=$HOME/.ssh/aws servers.yml
