--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,38 +1,45 @@
-version: 2.1
+version: 2
+orbs:
+  ansible: circleci/ansible@0.1.6
 
 jobs:
   deploy-job:
-    docker:
-      - image: circleci/python:3.9
-
     steps:
-      - checkout
-      - run:
-          name: Install Ansible
-          command: sudo pip3 install ansible
-      - run:
-          name: Run Ansible playbook
-          command: ansible-playbook -i inventory.yml --private-key=$HOME/.ssh/aws servers.yml
+      - add_ssh_keys:
+          fingerprints:
+            - "c3:37:69:80:da:ac:ac:bf:b1:55:29:37:ca:c8:18:68"
+  test:
+    docker:
+      - image: docker:stable
 
   build:
     docker:
       - image: circleci/node
     steps:
       - checkout
+      - setup_remote_docker
+      - run:
+          name: Install Ansible
+          command: |
+            sudo apt-get update && sudo apt-get install -y ansible
+      - run:
+          name: Run Ansible playbook
+          command: ansible-playbook -i inventory.yml --private-key=$HOME/.ssh/aws servers.yml
       - run:
           name: Build and push Docker image
           command: |
-            docker build -t nodeapp .
-            docker tag nodeapp $username/nodeapp:$CIRCLE_BUILD_NUM
-            docker login -u $username -p $password
-            docker push $username/nodeapp:$CIRCLE_BUILD_NUM
+            sudo docker build -t nodeapp .
+            sudo docker tag nodeapp $username/nodeapp:$CIRCLE_BUILD_NUM
+            sudo docker login -u $username -p $password
+            sudo docker push $username/nodeapp:$CIRCLE_BUILD_NUM
             ssh -o StrictHostKeyChecking=no -i $HOME/.ssh/aws ubuntu@ec2-54-184-243-185.us-west-2.compute.amazonaws.com "
-            docker run -d -p 3000:3000 --name test $username/nodeapp:$CIRCLE_BUILD_NUM"
+            sudo docker run -d -p 3000:3000 --name test $username/nodeapp:$CIRCLE_BUILD_NUM"
 
 workflows:
+  version: 2
   build-deploy:
     jobs:
-      - deploy-job
+      - test
       - build:
           requires:
-            - deploy-job
+            - test
