--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,16 +3,16 @@ orbs:
   ansible: circleci/ansible@0.1.6
 
 jobs:
-  deploy-job:
+  deploy:
     steps:
       - add_ssh_keys:
           fingerprints:
             - "c3:37:69:80:da:ac:ac:bf:b1:55:29:37:ca:c8:18:68"
-  test:
+  unit-test:
     docker:
       - image: docker:stable
 
-  build:
+  build-and-deploy:
     docker:
       - image: circleci/node
     steps:
@@ -24,7 +24,7 @@ jobs:
             sudo apt-get update && sudo apt-get install -y ansible
       - run:
           name: Run Ansible playbook
-          command: ansible-playbook -i inventory.yml --private-key=$HOME/.ssh/aws servers.yml
+          command: ansible-playbook -i inventory.yml --private-key=$HOME/.ssh/aws playbook.yml
       - run:
           name: Build and push Docker image
           command: |
@@ -37,9 +37,9 @@ jobs:
 
 workflows:
   version: 2
-  build-deploy:
+  build-and-deploy-workflow:
     jobs:
-      - test
-      - build:
+      - unit-test
+      - build-and-deploy:
           requires:
-            - test
+            - unit-test
