--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,17 @@
 version: 2
-orbs:
-  ansible: circleci/ansible@0.1.6
-
 jobs:
   deploy:
     steps:
       - add_ssh_keys:
           fingerprints:
             - "c3:37:69:80:da:ac:ac:bf:b1:55:29:37:ca:c8:18:68"
-  unit-test:
-    docker:
-      - image: docker:stable
-
+            
   build-and-deploy:
     docker:
-      - image: circleci/node
+      - image: aseelibrahimm/docker-ansible:lts
     steps:
       - checkout
       - setup_remote_docker
-      - run:
-          name: Install Ansible
-          command: |
-            sudo apt-get update && sudo apt-get install -y ansible
-      - run:
-          name: Run Ansible playbook
-          command: ansible-playbook -i inventory.yml --private-key=$HOME/.ssh/aws playbook.yml
       - run:
           name: Build and push Docker image
           command: |
@@ -32,14 +19,12 @@ jobs:
             sudo docker tag nodeapp $username/nodeapp:$CIRCLE_BUILD_NUM
             sudo docker login -u $username -p $password
             sudo docker push $username/nodeapp:$CIRCLE_BUILD_NUM
-            ssh -o StrictHostKeyChecking=no -i $HOME/.ssh/aws ubuntu@ec2-35-90-101-251.us-west-2.compute.amazonaws.com "
-            sudo docker run -d -p 3000:3000 --name test $username/nodeapp:$CIRCLE_BUILD_NUM"
+      - run:
+          name: Run Ansible playbook
+          command: ansible-playbook -i inventory.yml --private-key=$HOME/.ssh/aws --extra-vars "username=${username} CIRCLE_BUILD_NUM=${CIRCLE_BUILD_NUM}" playbook.yml
 
 workflows:
   version: 2
   build-and-deploy-workflow:
     jobs:
-      - unit-test
-      - build-and-deploy:
-          requires:
-            - unit-test
+      - build-and-deploy
