--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,10 @@ jobs:
       - run:
           name: Build and push Docker image
           command: |
-            sudo docker build -t nodeapp .
-            sudo docker tag nodeapp $username/nodeapp:$CIRCLE_BUILD_NUM
-            sudo docker login -u $username -p $password
-            sudo docker push $username/nodeapp:$CIRCLE_BUILD_NUM
+            docker build -t nodeapp .
+            docker tag nodeapp $username/nodeapp:$CIRCLE_BUILD_NUM
+            docker login -u $username -p $password
+            docker push $username/nodeapp:$CIRCLE_BUILD_NUM
       - run:
           name: Run Ansible playbook
           command: ansible-playbook -i inventory.yml --private-key=$HOME/.ssh/aws --extra-vars "username=${username} CIRCLE_BUILD_NUM=${CIRCLE_BUILD_NUM}" playbook.yml
