--- a/playbook.yml
+++ b/playbook.yml
@@ -1,4 +1,3 @@
----
 - hosts: servers
   become: true
   tasks:
@@ -20,13 +19,13 @@
 
     - name: Pull the Docker image
       docker_image:
-        name: "{{ lookup('env', 'username') }}/nodeapp:{{ lookup('env', 'CIRCLE_BUILD_NUM') }}"
+        name: "{{ username }}/nodeapp:{{ CIRCLE_BUILD_NUM }}"
         source: pull
 
     - name: Run Docker container
       docker_container:
         name: node-app
-        image: "{{ lookup('env', 'username') }}/nodeapp:{{ lookup('env', 'CIRCLE_BUILD_NUM') }}"
+        image: "{{ username }}/nodeapp:{{ CIRCLE_BUILD_NUM }}"
         state: started
         ports:
           - "3000:3000"
